[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/editor/InspectorPanel/InspectorPanel.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/editor/InspectorPanel/LevelTab/LevelTab.tscn" type="PackedScene" id=2]

[node name="InspectorPanel" type="Control"]
margin_right = 288.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelOpen" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentVBox" type="VBoxContainer" parent="PanelOpen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.00002
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectorHideBtn" type="ToolButton" parent="PanelOpen/ContentVBox"]
margin_right = 271.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Inspector"
align = 0

[node name="TabContainer" type="TabContainer" parent="PanelOpen/ContentVBox"]
margin_top = 26.0
margin_right = 271.0
margin_bottom = 584.0
size_flags_vertical = 3
tabs_visible = false

[node name="LevelTabs" parent="PanelOpen/ContentVBox/TabContainer" instance=ExtResource( 2 )]

[node name="ResizeHandler" type="Control" parent="PanelOpen"]
anchor_bottom = 1.0
margin_right = 8.0
mouse_default_cursor_shape = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelOpen/ResizeHandler"]
anchor_bottom = 1.0
margin_left = -3.0
margin_right = 5.0
text = "|"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelClose" type="Panel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectorShowBtn" type="ToolButton" parent="PanelClose"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 30.0
rect_rotation = 90.0
text = "Inspector"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelOpen/ContentVBox/InspectorHideBtn" to="." method="_on_InspectorHideBtn_pressed"]
[connection signal="gui_input" from="PanelOpen/ResizeHandler" to="." method="_on_ResizeHandler_gui_input"]
[connection signal="pressed" from="PanelClose/InspectorShowBtn" to="." method="_on_InspectorShowBtn_pressed"]
